Added 'pointer' cursor when hovered on touch-area

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             </svg></div>
     </div>
     <div id="touch">
-        <div class="touches" id="t0" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 0, 0, 270, 0, 100)) + '%')})"></div>
-        <div class="touches" id="t1" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 1, 0, 270, 0, 100)) + '%')})"></div>
-        <div class="touches" id="t2" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 2, 0, 270, 0, 100)) + '%')})"></div>
-        <div class="touches" id="t3" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 3, 0, 270, 0, 100)) + '%')})"></div>
-        <div class="touches" id="t4" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 4, 0, 270, 0, 100)) + '%')})"></div>
-        <div class="touches" id="t5" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 5, 0, 270, 0, 100)) + '%')})"></div>
-        <div class="touches" id="t6" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 6, 0, 270, 0, 100)) + '%')})"></div>
+        <div class="touches" id="t0" style="cursor: pointer;" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 0, 0, 270, 0, 100)) + '%')})"></div>
+        <div class="touches" id="t1" style="cursor: pointer;" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 1, 0, 270, 0, 100)) + '%')})"></div>
+        <div class="touches" id="t2" style="cursor: pointer;" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 2, 0, 270, 0, 100)) + '%')})"></div>
+        <div class="touches" id="t3" style="cursor: pointer;" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 3, 0, 270, 0, 100)) + '%')})"></div>
+        <div class="touches" id="t4" style="cursor: pointer;" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 4, 0, 270, 0, 100)) + '%')})"></div>
+        <div class="touches" id="t5" style="cursor: pointer;" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 5, 0, 270, 0, 100)) + '%')})"></div>
+        <div class="touches" id="t6" style="cursor: pointer;" onclick="setVolumeButton({via: 'touch', num: String(parseInt(map(45 * 6, 0, 270, 0, 100)) + '%')})"></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./libs/progressbar.min.js"></script>
